--- a/Tamagotchi/Tamagotchi/Views/MainPage.xaml
+++ b/Tamagotchi/Tamagotchi/Views/MainPage.xaml
@@ -10,7 +10,9 @@
             <Label Text="Tamagotchi" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="36"/>
         </Frame>
 
-        <Label Text="{Binding TextFromCode, Mode=OneWay}"></Label>
+        <Label Text="{Binding statHunger, Mode=OneWay}"></Label>
+        <Label TranslationY="20" Text="{Binding statHappyness, Mode=OneWay}"></Label>
+
 
         <Grid TranslationY="570" Padding="0" Margin="0"  RowSpacing="0" ColumnSpacing="0" RowDefinitions="80,0,*" ColumnDefinitions="*,*,*,*" BackgroundColor="{StaticResource Background_Color}">
 
