--- a/Tamagotchi/Tamagotchi/Views/MainPage.xaml
+++ b/Tamagotchi/Tamagotchi/Views/MainPage.xaml
@@ -4,25 +4,36 @@
              x:Class="Tamagotchi.Views.MainPage"
              >
 
+    <ContentPage.Content>
+        <AbsoluteLayout>
 
-    <AbsoluteLayout>
-        <Frame WidthRequest="320" BackgroundColor="{StaticResource Background_Color}" Padding="24" CornerRadius="0">
-            <Label Text="Tamagotchi" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="36"/>
-        </Frame>
+            
+            <Frame WidthRequest="320" BackgroundColor="{StaticResource Background_Color}" Padding="24" CornerRadius="0">
+                <Label Text="Tamagotchi" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="36"/>
+            </Frame>
 
-        <Label Text="{Binding statHunger, Mode=OneWay}"></Label>
-        <Label TranslationY="20" Text="{Binding statHappyness, Mode=OneWay}"></Label>
+            <Label Text="{Binding statHunger, Mode=OneWay}"></Label>
+            <Label TranslationY="20" Text="{Binding statHappyness, Mode=OneWay}"></Label>
+            <Label TranslationY="40" Text="{Binding width, Mode=OneWay}"></Label>
+            <Label TranslationY="60" Text="{Binding height, Mode=OneWay}"></Label>
+            
+            <ContentView TranslationY="120" BackgroundColor="{StaticResource Background_Color}" WidthRequest = "{Binding width, Mode=OneWay}" HeightRequest="{Binding contentHeight, Mode=OneWay}">
+                <Button WidthRequest="20" BorderColor="{StaticResource Background_Color}" Text="New Creature" Clicked="Create_New_Creature" IsVisible="{Binding hasCreature}" ></Button>
+                
 
+            </ContentView>
+            
+            <Grid TranslationY="570" Padding="0" Margin="0"  RowSpacing="0" ColumnSpacing="0" RowDefinitions="80,0,*" ColumnDefinitions="*,*,*,*" BackgroundColor="{StaticResource Background_Color}">
 
-        <Grid TranslationY="570" Padding="0" Margin="0"  RowSpacing="0" ColumnSpacing="0" RowDefinitions="80,0,*" ColumnDefinitions="*,*,*,*" BackgroundColor="{StaticResource Background_Color}">
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Text="Stats" Clicked="Push_Actions" ></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Text="Play" Clicked="Button_Clicked"></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Text="Feed" Clicked="Add_Hunger"></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="3" Text="-Hunger" Clicked="Decrease_Hunger"></Button>
 
-            <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Text="Stats" Clicked="Push_Actions" ></Button>
-            <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Text="Play" Clicked="Button_Clicked"></Button>
-            <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Text="Feed" Clicked="Add_Hunger"></Button>
-            <Button BorderColor="{StaticResource Background_Color}" Grid.Column="3" Text="-Hunger" Clicked="Decrease_Hunger"></Button>
+            </Grid>
 
-        </Grid>
-
-    </AbsoluteLayout>
+        </AbsoluteLayout>
+    </ContentPage.Content>
+    
 
 </ContentPage>
