--- a/Tamagotchi/Tamagotchi/Views/Actions.xaml
+++ b/Tamagotchi/Tamagotchi/Views/Actions.xaml
@@ -3,10 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Tamagotchi.Views.Actions">
     <ContentPage.Content>
-        <AbsoluteLayout>
-            <Frame WidthRequest="320" BackgroundColor="{StaticResource Background_Color}" Padding="24" CornerRadius="0">
+        <StackLayout>
+            <Frame WidthRequest="320" BackgroundColor="{StaticResource Background_Color}"  CornerRadius="0">
                 <Label Text="Actions" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="36"/>
             </Frame>
-        </AbsoluteLayout>
+            <Grid RowSpacing="0" ColumnSpacing="0" RowDefinitions="100,100" ColumnDefinitions="*"  BackgroundColor="{StaticResource Background_Color}">
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="0" Text="Feed" Clicked="Add_Hunger" ></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Grid.Row="0" Text="Drink" Clicked="Add_Thirst"></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="0" Text="Stimulate?" Clicked="Add_Stimulated"></Button>
+                
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="1" Text="Sleep" Clicked="Add_Tired"></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Grid.Row="1" Text="Temp_Play" Clicked="Add_Boredom"></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="1" Text="Temp_Reset" Clicked="ResetCreature"></Button>
+
+            </Grid>
+
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
