--- a/Tamagotchi/Tamagotchi/Views/Actions.xaml
+++ b/Tamagotchi/Tamagotchi/Views/Actions.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Tamagotchi.Views.Actions">
+             x:Class="Tamagotchi.Views.Actions"
+             >
     <ContentPage.Content>
         <StackLayout>
             <Frame WidthRequest="320" BackgroundColor="{StaticResource Background_Color}"  CornerRadius="0">
@@ -11,10 +12,12 @@
                 <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="0" Text="Feed" Clicked="Add_Hunger" ></Button>
                 <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Grid.Row="0" Text="Drink" Clicked="Add_Thirst"></Button>
                 <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="0" Text="Stimulate?" Clicked="Add_Stimulated"></Button>
-                
+
                 <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="1" Text="Sleep" Clicked="Add_Tired"></Button>
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Grid.Row="1" Text="Temp_Play" Clicked="Add_Boredom"></Button>
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="1" Text="Temp_Reset" Clicked="ResetCreature"></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Grid.Row="1" Text="Go To PlayGround" Clicked="GoTo_Playground"  IsEnabled="{Binding invertedAtPlayGround}"></Button>
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="1" Text="Leave Playground" Clicked="Leave_Playground" IsEnabled="{Binding atPlayGround}"></Button>
+
+                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="2" Text="Temp_Play" Clicked="Add_Boredom"></Button>
 
             </Grid>
 
