--- a/Tamagotchi/Tamagotchi/Views/MainPage.xaml
+++ b/Tamagotchi/Tamagotchi/Views/MainPage.xaml
@@ -10,33 +10,37 @@
                 <Label Text="Tamagotchi" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="36"/>
             </Frame>
             <Frame Padding="0" BorderColor="{StaticResource Content_Color}" BackgroundColor="{StaticResource Background_Color}">
-                <Label Text="{Binding creatureName}" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="28"/>
+                <Label Text="{Binding myCreature.name}" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="28"/>
             </Frame>
             <ContentView>
-                <Grid RowDefinitions="200,50" ColumnDefinitions="180,*" ColumnSpacing="10" BackgroundColor="{StaticResource Background_Color}">
-                    <Grid Grid.Column="0" RowDefinitions="20,20,20,20,20" ColumnDefinitions="80" BackgroundColor="{StaticResource Content_Color}" HeightRequest="{Binding contentHeight, Mode=OneWay}">
+                <Grid RowDefinitions="200,50" ColumnDefinitions="*,*" ColumnSpacing="10" BackgroundColor="{StaticResource Content_Color}">
+                    <Grid Grid.Column="0" RowDefinitions="20,20,20,20,20" ColumnDefinitions="*" BackgroundColor="{StaticResource Content_Color}">
 
                         <Label Grid.Row="0" Grid.Column="0" Text="Hunger: "></Label>
-                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding statHunger, Mode=OneWay}"></Label>
+                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding myCreature.hunger, Mode=OneWay}"></Label>
 
                         <Label Grid.Row="1" Grid.Column="0" Text="Thirst: "></Label>
-                        <Label Grid.Row="1" Grid.Column="1" Text="{Binding statThirst, Mode=OneWay}"></Label>
+                        <Label Grid.Row="1" Grid.Column="1" Text="{Binding myCreature.thirst, Mode=OneWay}"></Label>
 
                         <Label Grid.Row="2" Grid.Column="0" Text="Boredom: "></Label>
-                        <Label Grid.Row="2" Grid.Column="1" Text="{Binding statBoredom, Mode=OneWay}"></Label>
+                        <Label Grid.Row="2" Grid.Column="1" Text="{Binding myCreature.boredom, Mode=OneWay}"></Label>
 
                         <Label Grid.Row="3" Grid.Column="0" Text="Loneliness: "></Label>
-                        <Label Grid.Row="3" Grid.Column="1" Text="{Binding statLoneliness, Mode=OneWay}"></Label>
+                        <Label Grid.Row="3" Grid.Column="1" Text="{Binding myCreature.loneliness, Mode=OneWay}"></Label>
 
                         <Label Grid.Row="4" Grid.Column="0" Text="Stimulated: "></Label>
-                        <Label Grid.Row="4" Grid.Column="1" Text="{Binding statStimulated, Mode=OneWay}"></Label>
+                        <Label Grid.Row="4" Grid.Column="1" Text="{Binding myCreature.stimulated, Mode=OneWay}"></Label>
 
                         <Label Grid.Row="5" Grid.Column="0" Text="Tired: "></Label>
-                        <Label Grid.Row="5" Grid.Column="1" Text="{Binding statTired, Mode=OneWay}"></Label>
+                        <Label Grid.Row="5" Grid.Column="1" Text="{Binding myCreature.tired, Mode=OneWay}"></Label>
+
+                        <!--<Label Grid.Row="6" Grid.Column="0" Text="Alive Status: "></Label>
+                        <Label Grid.Row="6" Grid.Column="1" Text="{Binding myCreature.isAlive, Mode=OneWay}"></Label>-->
 
                     </Grid>
 
-                    <Image Grid.Row="0" Grid.Column="1" Source="{Binding StatusImage}"></Image>
+                    <Image Grid.Row="0" Grid.Column="1" Source="{Binding myCreature.myStatus}" Aspect="AspectFit" ></Image>
+                    <Button Grid.Row="1" Grid.Column="1" Text="Create new Creature" Font="11" BorderWidth="2" BorderColor="{StaticResource Font_Color}" Clicked="Create_New_Creature"></Button>
 
                 </Grid>
             </ContentView>
@@ -45,9 +49,8 @@
 
             <Grid RowDefinitions="80" ColumnDefinitions="*" ColumnSpacing="0" BackgroundColor="{StaticResource Background_Color}">
 
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Text="Actions" Clicked="Push_Actions" ></Button>
-                <!--<Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Text="Stats" Clicked="Button_Clicked"></Button>-->
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Text="Settings" Clicked="Push_Actions"></Button>
+                <Button Grid.Column="0" Text="Actions" BorderWidth="2" BorderColor="{StaticResource Font_Color}" Clicked="Push_Actions" IsEnabled="{Binding myCreature.isAlive}"></Button>
+                <Button Grid.Column="1" Text="Settings" BorderWidth="2" BorderColor="{StaticResource Font_Color}" Clicked="Push_Settings"></Button>
 
             </Grid>
 
