--- a/Tamagotchi/Tamagotchi/Views/Settings.xaml
+++ b/Tamagotchi/Tamagotchi/Views/Settings.xaml
@@ -7,9 +7,9 @@
             <Frame WidthRequest="320" BackgroundColor="{StaticResource Background_Color}"  CornerRadius="0">
                 <Label Text="Settings" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="36"/>
             </Frame>
-            <Grid RowSpacing="0" ColumnSpacing="0" RowDefinitions="100,100" ColumnDefinitions="*"  BackgroundColor="{StaticResource Background_Color}">
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="0" Text="Reset Stats" Clicked="ResetCreature" ></Button>
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="0" Text="New Creature" Clicked="Create_New_Creature"></Button>
+            <Grid RowSpacing="0" ColumnSpacing="0" RowDefinitions="100" ColumnDefinitions="*"  BackgroundColor="{StaticResource Background_Color}">
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="0" Grid.Row="0" Text="Reset Stats" Clicked="ResetCreature" ></Button>
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="1" Grid.Row="0" Text="New Creature" Clicked="Create_New_Creature"></Button>
 
             </Grid>
 
