--- a/Tamagotchi/Tamagotchi/Views/Actions.xaml
+++ b/Tamagotchi/Tamagotchi/Views/Actions.xaml
@@ -3,21 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Tamagotchi.Views.Actions"
              >
+
+    
+    
     <ContentPage.Content>
         <StackLayout>
             <Frame WidthRequest="320" BackgroundColor="{StaticResource Background_Color}"  CornerRadius="0">
                 <Label Text="Actions" HorizontalTextAlignment="Center" TextColor="{StaticResource Font_Color}" FontSize="36"/>
             </Frame>
             <Grid RowSpacing="0" ColumnSpacing="0" RowDefinitions="100,100" ColumnDefinitions="*"  BackgroundColor="{StaticResource Background_Color}">
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="0" Text="Feed" Clicked="Add_Hunger" ></Button>
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Grid.Row="0" Text="Drink" Clicked="Add_Thirst"></Button>
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="0" Text="Stimulate?" Clicked="Add_Stimulated"></Button>
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="0" Grid.Row="0" Text="Feed" Clicked="Add_Hunger" IsEnabled="{Binding atPlayGround, Converter={StaticResource Converter}}"></Button>
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="1" Grid.Row="0" Text="Drink" Clicked="Add_Thirst" IsEnabled="{Binding atPlayGround, Converter={StaticResource Converter}}"></Button>
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="2" Grid.Row="0" Text="Play" Clicked="Add_Boredom" IsEnabled="{Binding atPlayGround, Converter={StaticResource Converter}}"></Button>
 
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="1" Text="Sleep" Clicked="Add_Tired"></Button>
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="1" Grid.Row="1" Text="Go To PlayGround" Clicked="GoTo_Playground"  IsEnabled="{Binding invertedAtPlayGround}"></Button>
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="2" Grid.Row="1" Text="Leave Playground" Clicked="Leave_Playground" IsEnabled="{Binding atPlayGround}"></Button>
-
-                <Button BorderColor="{StaticResource Background_Color}" Grid.Column="0" Grid.Row="2" Text="Temp_Play" Clicked="Add_Boredom"></Button>
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="0" Grid.Row="1" Text="Sleep" Clicked="Add_Tired" IsEnabled="{Binding atPlayGround, Converter={StaticResource Converter}}"></Button>
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="1" Grid.Row="1" Text="Go To PlayGround" Clicked="GoTo_Playground"  IsEnabled="{Binding atPlayGround, Converter={StaticResource Converter}}"></Button>
+                <Button BorderWidth="2" BorderColor="{StaticResource Font_Color}" Grid.Column="2" Grid.Row="1" Text="Leave Playground" Clicked="Leave_Playground" IsEnabled="{Binding atPlayGround}"></Button>
 
             </Grid>
 
